tests/typec-test/test_out/enum.txt
error: Func not found
 --> enum\root.ctl:4:11
  |
4 |     \Some~4 => 5
  |           ^ this does not exist
  |
  = info: queried '0\Option[uint] == 0\Option[uint]'

info: tir repr of functions:
 

